--- a/items/itemwidget.ui
+++ b/items/itemwidget.ui
@@ -148,18 +148,15 @@
        </spacer>
       </item>
       <item>
-       <widget class="QToolButton" name="toolButton">
-        <property name="font">
-         <font>
-          <pointsize>12</pointsize>
-          <italic>true</italic>
-         </font>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">border: 0px;</string>
+       <widget class="QLabel" name="label_status">
+        <property name="minimumSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
         </property>
         <property name="text">
-         <string>...</string>
+         <string/>
         </property>
        </widget>
       </item>
