Добавлены иконы actions и настройка адреса сервера

--- a/dialogs/settings.ui
+++ b/dialogs/settings.ui
@@ -116,7 +116,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Подключиться</string>
+           <string>Установить</string>
           </property>
          </widget>
         </item>
