--- a/resource.qrc
+++ b/resource.qrc
@@ -2,5 +2,10 @@
     <qresource prefix="/img">
         <file>resources/images/red_cross.png</file>
         <file>resources/images/check_mark.png</file>
+        <file>resources/images/actions/openFile.png</file>
+        <file>resources/images/actions/createFile.png</file>
+        <file>resources/images/actions/saveAs.png</file>
+        <file>resources/images/actions/save.png</file>
+        <file>resources/images/actions/settings.png</file>
     </qresource>
 </RCC>
